--- a/MU/TransportModule/Resources/config/forms.yml
+++ b/MU/TransportModule/Resources/config/forms.yml
@@ -123,5 +123,6 @@ services:
         arguments:
             - "@translator.default"
             - "@mu_transport_module.entity_factory"
+            - "@request_stack"
         tags:
             - { name: form.type }
