--- a/MU/TransportModule/Resources/config/linkContainer.yml
+++ b/MU/TransportModule/Resources/config/linkContainer.yml
@@ -6,5 +6,4 @@ services:
             - "@router"
             - "@zikula_permissions_module.api.permission"
             - "@mu_transport_module.controller_helper"
-        tags:
-            - { name: zikula.link_container }
+        tags: ['zikula.link_container']
