--- a/MU/TransportModule/Resources/config/logger.yml
+++ b/MU/TransportModule/Resources/config/logger.yml
@@ -2,5 +2,4 @@ services:
     # Log processor
     mu_transport_module.log.processor:
         class: Monolog\Processor\PsrLogMessageProcessor
-        tags:
-            - { name: monolog.processor }
+        tags: ['monolog.processor']
