--- a/MU/TransportModule/Resources/config/twig.yml
+++ b/MU/TransportModule/Resources/config/twig.yml
@@ -9,5 +9,4 @@ services:
             - "@mu_transport_module.workflow_helper"
             - "@mu_transport_module.listentries_helper"
         public: false
-        tags:
-            - { name: twig.extension }
+        tags: ['twig.extension']
