--- a/MU/TransportModule/Resources/workflows/none.yml
+++ b/MU/TransportModule/Resources/workflows/none.yml
@@ -1,4 +1,4 @@
-workflow:
+framework:
     workflows:
         mutransportmodule_none:
             type: state_machine
@@ -13,14 +13,18 @@ workflow:
             places:
                 - initial
                 - approved
+                - trashed
                 - deleted
             transitions:
-                submit:
-                    from: initial
-                    to: approved
-                updateapproved:
-                    from: approved
-                    to: approved
-                delete:
-                    from: approved
-                    to: deleted
+                - name: submit
+                  from: initial
+                  to: approved
+                - name: update
+                  from: approved
+                  to: approved
+                - name: trash
+                  from: approved
+                  to: trashed
+                - name: delete
+                  from: [approved, trashed]
+                  to: deleted
